Bug 3118 - Xprint server is broken due 05/04/20 05:49:46 commit
Summary: Xprint server is broken due 05/04/20 05:49:46 commit
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: git
Hardware: All All
: high blocker
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-04-23 15:41 UTC by Roland Mainz
Modified: 2005-04-22 22:57 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch for 2005-04-23-trunk (5.43 KB, patch)
2005-04-23 15:54 UTC, Roland Mainz
no flags Details | Splinter Review

Description Roland Mainz 2005-04-23 15:41:03 UTC
The following commit broke the Xprint server as it cannot initalise any print
screens anymore.

-- snip --
CVSROOT:        /cvs/xorg
Module name:    xc
Changes by:     daniels@gabe.freedesktop.org    05/04/20 05:49:46

Log message:
  Conditionalise usage of Xprint functions and headers.

Modified files:
      ./:
        ChangeLog 
      xc/programs/Xserver/dix/:
        main.c 
  
  Revision      Changes    Path
  1.881         +3 -1      xc/ChangeLog
  1.8           +7 -1      xc/programs/Xserver/dix/main.c
-- snip --
Comment 1 Roland Mainz 2005-04-23 15:46:05 UTC
Taking bug... the symbol |XPRINT| is not available in the codebase universally
and shouldn't be (for other reasons) so |#ifdef|'ing on that symbol was a very
BAD idea... ;-(
Comment 2 Roland Mainz 2005-04-23 15:54:16 UTC
Created attachment 2525 [details] [review]
Patch for 2005-04-23-trunk
Comment 3 Roland Mainz 2005-04-23 15:56:21 UTC
Patch checked-in...

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.897; previous revision: 1.896
/cvs/xorg/xc/programs/Xserver/dix/main.c,v  <--  xc/programs/Xserver/dix/main.c
new revision: 1.9; previous revision: 1.8
Mailing the commit message to xorg-commit@lists.freedesktop.org...

... marking bug as FIXED.
Comment 4 Roland Mainz 2005-04-23 15:57:37 UTC
Note:
I have a patch in the queue to conditionalise the headers so please don#t try it
again using the |XPRINT|-symbol... ot can only go bad... ;-(


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.