//bugs.freedesktop.org/show_bug.cgi?id=3118) attachment #2525     (https://bugs.freedesktop.org/attachment.cgi?id=2525) Get Xprint server     working again which was broken by the 05/04/20 05:49:46 commit commit (the CPP symbol |XPRINT| is not universally     available when building the Xserver and should be used with care).